8212005: Epsilon elastic TLAB sizing may cause misalignment

Reviewed-by: rkennke, tschatzl